examples/test/testpolicy3603.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3603
  namespace: namespace412
spec:
  podSelector:
    matchLabels:
      key29: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value25
          key15: value15
      podSelector:
        matchLabels:
          key7: value26
          key35: value46
          key17: value10
